--- a/app/src/main/res/layout/view_bookmark_grid_item.xml
+++ b/app/src/main/res/layout/view_bookmark_grid_item.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        xmlns:fresco="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        card_view:cardUseCompatPadding="true">
+        fresco:cardElevation="4dp"
+        app:cardCornerRadius="16dp"
+        app:cardUseCompatPadding="true">
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -14,24 +17,50 @@
             android:orientation="vertical">
 
         <TextView
-                android:id="@+id/BookName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:textColor="@android:color/black"
-                android:textSize="16sp"/>
-
-        <TextView
-                android:id="@+id/AuthorName"
+                android:id="@+id/postTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#1976D2"
                 android:gravity="center_horizontal"
                 android:paddingBottom="8dp"
                 android:paddingTop="8dp"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:text="hello world"
                 android:textColor="#ffffff"
+                android:textSize="14sp"/>
+
+        <com.facebook.drawee.view.SimpleDraweeView
+                android:id="@+id/postImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                fresco:viewAspectRatio="1"
+                fresco:actualImageScaleType="fitXY"
+                fresco:placeholderImage="@drawable/science"
+                android:background="#000000"/>
+
+        <TextView
+                android:id="@+id/postText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:textColor="@android:color/black"
+                android:maxLines="3"
+                android:ellipsize="end"
+                android:textSize="15sp"/>
+
+        <TextView
+                android:id="@+id/postAuthor"
+                android:textAlignment="textEnd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:singleLine="true"
+                android:ellipsize="end"
+                android:textColor="@android:color/black"
                 android:textSize="13sp"/>
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
